Fixing some css overlaps

--- a/frontend/src/components/styles/Home.css
+++ b/frontend/src/components/styles/Home.css
@@ -1,57 +1,4 @@
-/* .home {
-    width: 100%;
-    height: 100vh;
-    background: linear-gradient(to bottom, #0d41e1, #07c8f9);
-    background-size: cover;
-    background-repeat: repeat;
-    background-position: center;
-    position: relative;
-}
-.HomeContent{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    z-index: 2;
-    display: flex;
-    flex-direction: column;
-}
-.HomeQuote{
-    width: 100%;
-    font-size: 60px;
-    font-weight: 600;
-    color: #fff;
-    text-align: center;
-    position: relative;
-    margin-top: 12%;
-}
-.start{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 200px;
-    height: 40px;
-    background-color: rgb(95, 43, 186);
-    color: white;
-    font-weight: bolder;
-    font-size: 16px;
-    border-radius: 12px;
-}
-.arrow{
-    padding-top: 10px;
-    padding-left: 10px;
-} */
-/* Global Styles */
-/* Global Styles */
-/* body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-    color: #333;
-    overflow-x: hidden;
-} */
 
-/* Hero Section */
 .hero {
     /* background: linear-gradient(to bottom right, rgba(117, 82, 112, 0.1), rgba(13, 77, 71, 0.4)), url('background-image.jpg') no-repeat center center fixed; */
     background-attachment: fixed;
